Removed LinkedLists and added ArrayList